--- a/factgenie/templates/forms/actions_modal.html
+++ b/factgenie/templates/forms/actions_modal.html
@@ -45,7 +45,7 @@
                                 <small class="text-muted">View the statistics of the annotation
                                     spans.</small>
                             </p>
-                            <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source={{ mode }}"
+                            <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source={{ metadata.source }}"
                                 type="button" class="btn btn-primary"><i class="fa fa-area-chart"></i>
                                 View
                                 statistics</a>
