Add warning about sliders not working in Safari

--- a/factgenie/templates/crowdsourcing_new.html
+++ b/factgenie/templates/crowdsourcing_new.html
@@ -197,7 +197,7 @@
                           <span style="margin-left: 5px; margin-right: 10px;">List of options</span>
                           <div class="mb-2">
                             <small class="form-text text-muted">Options that the annotators can choose from for each
-                              example.</small>
+                              example. <b>Note that sliders are currently not working in the Safari browser.</b></small>
                           </div>
                         </div>
                         <div id="options"></div>
