--- a/factgenie/templates/browse.html
+++ b/factgenie/templates/browse.html
@@ -108,23 +108,23 @@
           </div>
         </div>
 
-        <div id="rightpanel" class="collapse show">
-          <div id='sidepanel-content' class="tab-content">
-            <div id='setuparea' style="display: none">
-              <!-- inline buttons -->
-              <div class="mb-1">
-                <small class="text-muted"><i class="fa fa-pencil"></i> Annotations (click to show)</small>
-              </div>
-              <p class="d-inline-flex gap-1" id="annotations-select">
-              </p>
+        <div id="rightpanel" class="collapse show"">
+          <div id='sidepanel-content' class=" tab-content">
+          <div id='setuparea' style="display: none">
+            <!-- inline buttons -->
+            <div class="mb-1">
+              <small class="text-muted"><i class="fa fa-pencil"></i> Annotations (click to show)</small>
             </div>
-
+            <p class="d-inline-flex gap-1" id="annotations-select">
+            </p>
           </div>
 
-          <div id='outputarea'></div>
         </div>
+
+        <div id='outputarea'></div>
       </div>
     </div>
+  </div>
   </div>
   </div>
 
