--- a/factgenie/templates/forms/actions_modal.html
+++ b/factgenie/templates/forms/actions_modal.html
@@ -45,7 +45,7 @@
                                 <small class="text-muted">View the statistics of the annotation
                                     spans.</small>
                             </p>
-                            <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source={{ metadata.source }}"
+                            <a href="{{ host_prefix }}/analyze/detail/{{ campaign_id }}?source={{ metadata.source }}"
                                 type="button" class="btn btn-primary"><i class="fa fa-area-chart"></i>
                                 View
                                 statistics</a>
@@ -56,7 +56,7 @@
                                 <small class="text-muted">Download the {{ outputs_name }} collected in the
                                     campaign in a ZIP file.</small>
                             </p>
-                            <a href="{{ host_prefix }}/export_campaign_outputs?mode={{ mode }}&campaign={{ campaign_id }}"
+                            <a href="{{ host_prefix }}/export_campaign_outputs/{{ campaign_id }}?mode={{ mode }}"
                                 class="btn btn-primary" data-bs-toggle="tooltip"
                                 id="download-button-modal-{{ campaign_id }}" title="Export {{ outputs_name }}">
                                 <i class="fa fa-download"></i> Download {{ outputs_name }}
