--- a/factgenie/templates/llm_campaign_detail.html
+++ b/factgenie/templates/llm_campaign_detail.html
@@ -53,7 +53,7 @@
             style="display: none;" {% endif %}>
             <i class="fa fa-pause"></i> Pause {% if mode == 'llm_eval' %}evaluation{% else %}generation{% endif %}
           </a>
-          <a href="{{ host_prefix }}/export_campaign_outputs?campaign={{ campaign_id }}&mode={{ mode }}"
+          <a href="{{ host_prefix }}/export_campaign_outputs/{{ campaign_id }}?mode={{ mode }}"
             class="btn btn-outline-secondary" data-bs-toggle="tooltip" id="download-button-{{ metadata.id }}"
             title="Export outputs">
             <i class="fa fa-download"></i> Download {% if mode == 'llm_eval' %}annotations{% else %}outputs{%
@@ -75,7 +75,7 @@
           </a>
           {% endif %}
           {% if mode == 'llm_eval' %}
-          <a href="{{ host_prefix }}/analyze/detail?campaign={{ campaign_id }}&source={{ mode }}" type="button"
+          <a href="{{ host_prefix }}/analyze/detail/{{ campaign_id }}?source={{ mode }}" type="button"
             class="btn btn-outline-secondary"><i class="fa fa-area-chart"></i> View statistics</a>
           {% endif %}
         </div>
