--- a/factgenie/templates/analyze_detail.html
+++ b/factgenie/templates/analyze_detail.html
@@ -174,6 +174,7 @@
     </div>
     <div class="tab-content" id="pills-tabContent">
       <div class="tab-pane mb-5 fade" id="pills-charts" role="tabpanel" aria-labelledby="pills-charts-tab">
+        {% if statistics.extra_fields %}
         <table id="extra-fields-table" class="table table-bordered table-hover" data-show-export="true"
           data-toggle="table" data-sortable="true" data-toolbar="#toolbar">
           <thead>
@@ -195,6 +196,7 @@
             {% endfor %}
           </tbody>
         </table>
+        {% endif %}
       </div>
     </div>
   </div>
