--- a/factgenie/templates/pages/analyze.html
+++ b/factgenie/templates/pages/analyze.html
@@ -54,9 +54,9 @@
             <tbody>
               {% for campaign_id, campaign in campaigns.items() %}
               <tr>
-                <td><img src="{{ host_prefix }}/static/img/{{ campaign.metadata.source }}.png" style="max-width: 18px;"
+                <td><img src="{{ host_prefix }}/static/img/{{ campaign.metadata.mode }}.png" style="max-width: 18px;"
                     class="heading-img-inline"> <a
-                    href="{{ host_prefix }}/analyze/detail/{{ campaign.metadata.id }}?source={{ campaign.metadata.source }}"
+                    href="{{ host_prefix }}/analyze/detail/{{ campaign.metadata.id }}?source={{ campaign.metadata.mode }}"
                     class="blue-link">{{
                     campaign.metadata.id }}</a></td>
                 <td>{{ campaign.metadata.created }}</td>
@@ -67,9 +67,9 @@
                   {% endfor %}
                 </td>
                 <td>
-                  {% if campaign.metadata.source == 'llm_eval' or campaign.metadata.source == 'llm_gen' %}
+                  {% if campaign.metadata.mode == 'llm_eval' or campaign.metadata.mode == 'llm_gen' %}
                   {% include 'include/progress_bar_llm.html' %}
-                  {% elif campaign.metadata.source == 'crowdsourcing' %}
+                  {% elif campaign.metadata.mode == 'crowdsourcing' %}
                   {% include 'include/progress_bar_crowdsourcing.html' %}
                   {% else %}
                   external
