--- a/factgenie/templates/pages/browse.html
+++ b/factgenie/templates/pages/browse.html
@@ -30,8 +30,8 @@
           <li class="nav-item" style="margin-right: 5px;">
             <select id="dataset-select" class="form-select form-select-sm"
               style="display: inline-block; margin-right: 10px; max-width: 250px;">
-              {% for name, dataset in datasets.items() %}
-              <option value="{{ name }}">{{ name }}</option>
+              {% for dataset_id, dataset in datasets.items() %}
+              <option value="{{ dataset_id }}">{{ dataset.name }}</option>
               {% endfor %}
             </select>
           </li>
