--- a/factgenie/templates/pages/manage.html
+++ b/factgenie/templates/pages/manage.html
@@ -202,7 +202,7 @@
               {% endfor %}
             </tbody>
           </table>
-          <div class="text-center mb-5">
+          <div class="text-center mb-5 mt-5">
             <a type="button" class="btn btn-primary mt-2 mb-4" data-bs-toggle="modal"
               data-bs-target="#add-dataset-modal">Add
               dataset</a>
@@ -246,7 +246,7 @@
             </tbody>
           </table>
           <div class="text-center mb-5">
-            <a type="button" class="btn btn-primary mt-5" data-bs-toggle="modal" data-bs-target="#uploadModal">Add
+            <a type="button" class="btn btn-primary mb-5 mt-5" data-bs-toggle="modal" data-bs-target="#uploadModal">Add
               model
               outputs</a>
           </div>
